<resources>
    <string name="app_name">Alarm Clock</string>
    <string name="str_isAlarmSet">Did you set the alarm?</string>
    <string name="str_setAlarm">Set Alarm</string>
    <string name="str_alarmOff">Alarm Off</string>
    <string name="str_nightAlarm">Night Alarm</string>
    <string name="str_backToMain">Back to Main Alarm</string>
    <string name="channel_one_body">The alarm is going off!</string>
    <string-array name="music_array">
        <item>Play a random alarm</item>
        <item>Animal Crossing - 1 PM</item>
        <item>Animal Crossing - 8 PM</item>
        <item>Animal Crossing - Save Theme</item>
        <item>Kirby Dream Land - Green Greens</item>
        <item>Kirby Amazing Mirror - Rainbow Route</item>
        <item>Kirby Amazing Mirror - Stage Clear</item>
        <item>LoZ Minish Cap - Fairy Fountain</item>
        <item>Mother 3 - Love Theme</item>
        <item>Pokemon RSE - Dive</item>
        <item>Super Mario Sunshine - Isle Delfino</item>
    </string-array>

    <string name="snooze_Prompt">Select the snooze time</string>
    <string-array name="mins_arrays">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
        <item> 50 </item>
        <item> 51 </item>
        <item> 52 </item>
        <item> 53 </item>
        <item> 54 </item>
        <item> 55 </item>
        <item> 56 </item>
        <item> 57 </item>
        <item> 58 </item>
        <item> 59 </item>
        <item> 60 </item>
    </string-array>

</resources>