<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
    android:fitsSystemWindows="true">

<TimePicker
    android:id="@+id/timePicker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar2"
    android:layout_alignParentStart="true"
    android:background="@drawable/day_background"
    />

<TextView
        android:id="@+id/update_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_isAlarmSet"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true" />

<Button
    android:id="@+id/alarm_on"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_setAlarm"
    android:clickable="true"
    android:layout_below="@+id/update_text"
    android:layout_toStartOf="@+id/alarm_off" />

<Button
    android:id="@+id/alarm_off"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_alarmOff"
    android:clickable="true"
    android:layout_below="@+id/update_text"
    android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/snooze_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_text"
        android:layout_toEndOf="@+id/alarm_off"
        android:text="Snooze" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_off"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/night_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_nightAlarm"
        android:clickable="true"
        android:layout_marginStart="18dp"
        android:layout_below="@+id/spinner"
        android:layout_alignStart="@+id/alarm_on" />

    <Button
        android:id="@+id/Snooze_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_toEndOf="@+id/night_alarm"
        android:clickable="true"
        android:text="Snooze Settings" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/night_alarm"
        android:layout_centerHorizontal="true"
        android:dividerHeight="1dp"
        android:visibility="gone" />

</RelativeLayout>
